Kick DBFilesClient.NET and use WDBXLib

--- a/WowPacketParser.Tests/WowPacketParser.Tests.csproj
+++ b/WowPacketParser.Tests/WowPacketParser.Tests.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WowPacketParser.Tests</RootNamespace>
     <AssemblyName>WowPacketParser.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -71,6 +71,9 @@
       <Project>{0BF6F270-0B6F-4705-8E1A-F57DB76DB407}</Project>
       <Name>WowPacketParser</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
