--- a/WowPacketParser/WowPacketParser.csproj
+++ b/WowPacketParser/WowPacketParser.csproj
@@ -32,7 +32,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -90,14 +90,15 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DBFilesClient.NET, Version=1.1.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\DBFilesClient.NET.1.1.4\lib\net452\DBFilesClient.NET.dll</HintPath>
-    </Reference>
     <Reference Include="DotNetZip, Version=1.10.1.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
       <HintPath>..\packages\DotNetZip.1.10.1\lib\net20\DotNetZip.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
+    <Reference Include="Google.Protobuf, Version=3.5.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
+      <HintPath>..\packages\Google.Protobuf.3.5.1\lib\net45\Google.Protobuf.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MySql.Data, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.8.0.11\lib\net452\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="PowerCollections, Version=1.0.2141.24679, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -108,38 +109,33 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core">
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Transactions" />
+    <Reference Include="System.Xml" />
     <Reference Include="Tamir.SharpSSH, Version=1.1.1.13, Culture=neutral">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Tamir.SharpSSH.1.1.1.13\lib\Tamir.SharpSSH.dll</HintPath>
     </Reference>
+    <Reference Include="WDBXLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\redist\WDBXLib.dll</HintPath>
+    </Reference>
+    <Reference Include="WDBXLib.Definitions, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\redist\WDBXLib.Definitions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBC\DBC.cs" />
-    <Compile Include="DBC\Structures\Legion\AchievementEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\AreaTableEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\BroadcastTextEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\CreatureDifficultyEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\CreatureEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\CreatureDisplayInfoEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\CreatureFamilyEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\CriteriaEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\CriteriaTreeEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\DBFileAttribute.cs" />
-    <Compile Include="DBC\Structures\Legion\DifficultyEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\FactionEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\FactionTemplateEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\ItemEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\ItemSparseEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\MapDifficultyEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\MapEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\PhaseXPhaseGroupEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\SoundKitEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\SpellEffectEntry.cs" />
-    <Compile Include="DBC\Structures\Legion\SpellEntry.cs" />
     <Compile Include="Enums\AccountDataType.cs" />
     <Compile Include="Enums\ActionButtonType.cs" />
     <Compile Include="Enums\AIReaction.cs" />
