--- a/WowPacketParser/packages.config
+++ b/WowPacketParser/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DBFilesClient.NET" version="1.1.4" targetFramework="net452" />
   <package id="DotNetZip" version="1.10.1" targetFramework="net462" />
-  <package id="MySql.Data" version="6.9.9" targetFramework="net462" />
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net462" />
+  <package id="MySql.Data" version="8.0.11" targetFramework="net462" />
   <package id="Sigil" version="4.7.0" targetFramework="net462" />
   <package id="Tamir.SharpSSH" version="1.1.1.13" targetFramework="net462" />
   <package id="XAct.Wintellect.PowerCollections" version="0.0.1" targetFramework="net462" />
