--- a/WowPacketParser/WowPacketParser.csproj
+++ b/WowPacketParser/WowPacketParser.csproj
@@ -620,6 +620,7 @@
     <Compile Include="Store\Objects\Player.cs" />
     <Compile Include="Store\Objects\QuestObjective.cs" />
     <Compile Include="Store\Objects\QuestOfferReward.cs" />
+    <Compile Include="Store\Objects\QuestOfferRewardLocale.cs" />
     <Compile Include="Store\Objects\QuestPOI.cs" />
     <Compile Include="Store\Objects\QuestPOIPoint.cs" />
     <Compile Include="Store\Objects\QuestRequestItems.cs" />
