--- a/WowPacketParser/App.config
+++ b/WowPacketParser/App.config
@@ -134,6 +134,7 @@
         <add key="npc_trainer"                            value="false"/>
         <add key="npc_vendor"                             value="false"/>
         <add key="page_text"                              value="false"/>
+        <add key="page_text_locale"                       value="false"/>
         <add key="playercreateinfo"                       value="false"/>
         <add key="playercreateinfo_action"                value="false"/>
         <add key="points_of_interest"                     value="false"/>
