--- a/WowPacketParserModule.V8_0_1_27101/WowPacketParserModule.V8_0_1_27101.csproj
+++ b/WowPacketParserModule.V8_0_1_27101/WowPacketParserModule.V8_0_1_27101.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Hotfix\WorldMapOverlayEntry.cs" />
     <Compile Include="Hotfix\WorldSafeLocsEntry.cs" />
     <Compile Include="Parsers\AccountDataHandler.cs" />
+    <Compile Include="Parsers\ArenaHandler.cs" />
     <Compile Include="Parsers\AuthenticationHandler.cs" />
     <Compile Include="Parsers\BattlegroundHandler.cs" />
     <Compile Include="Parsers\ChallengeModeHandler.cs" />
