--- a/WowPacketParserModule.V8_0_1_27101/WowPacketParserModule.V8_0_1_27101.csproj
+++ b/WowPacketParserModule.V8_0_1_27101/WowPacketParserModule.V8_0_1_27101.csproj
@@ -291,6 +291,7 @@
     <Compile Include="Parsers\AuthenticationHandler.cs" />
     <Compile Include="Parsers\BattlegroundHandler.cs" />
     <Compile Include="Parsers\ChallengeModeHandler.cs" />
+    <Compile Include="Parsers\ChannelHandler.cs" />
     <Compile Include="Parsers\CharacterHandler.cs" />
     <Compile Include="Parsers\ChatHandler.cs" />
     <Compile Include="Parsers\CombatHandler.cs" />
