--- a/WowPacketParserModule.V8_0_1_27101/WowPacketParserModule.V8_0_1_27101.csproj
+++ b/WowPacketParserModule.V8_0_1_27101/WowPacketParserModule.V8_0_1_27101.csproj
@@ -303,6 +303,7 @@
     <Compile Include="Parsers\GroupHandler.cs" />
     <Compile Include="Parsers\GuildHandler.cs" />
     <Compile Include="Parsers\HotfixHandler.cs" />
+    <Compile Include="Parsers\InstanceHandler.cs" />
     <Compile Include="Parsers\ItemHandler.cs" />
     <Compile Include="Parsers\LootHandler.cs" />
     <Compile Include="Parsers\MiscellaneousHandler.cs" />
