--- a/WowPacketParser/App.config
+++ b/WowPacketParser/App.config
@@ -155,6 +155,13 @@
 
 
         <!--
+               Option:      IgnoreZeroValues
+               Description: Won't write Updatefields containing 0 values to file
+               Default:     "false"
+        -->
+        <add key="IgnoreZeroValues" value="false"/>
+      
+        <!--
                Option:      ForceInsertQueries
                Description: Won't generate UPDATE queries, but DELETE and INSERT queries.
                Default:     "false"
