--- a/WowPacketParserModule.V7_0_3_22248/WowPacketParserModule.V7_0_3_22248.csproj
+++ b/WowPacketParserModule.V7_0_3_22248/WowPacketParserModule.V7_0_3_22248.csproj
@@ -304,6 +304,7 @@
     <Compile Include="Parsers\BattlePetHandler.cs" />
     <Compile Include="Parsers\BlackMarketHandler.cs" />
     <Compile Include="Parsers\CalendarHandler.cs" />
+    <Compile Include="Parsers\ChallengeModeHandler.cs" />
     <Compile Include="Parsers\CharacterHandler.cs" />
     <Compile Include="Parsers\ChatHandler.cs" />
     <Compile Include="Parsers\CombatHandler.cs" />
