--- a/WowPacketParserModule.V6_0_2_19033/WowPacketParserModule.V6_0_2_19033.csproj
+++ b/WowPacketParserModule.V6_0_2_19033/WowPacketParserModule.V6_0_2_19033.csproj
@@ -163,6 +163,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\WowPacketParserModule.Substructures\WowPacketParserModule.Substructures.csproj">
+      <Project>{953229b7-01c4-457b-86cc-f0dd1173f217}</Project>
+      <Name>WowPacketParserModule.Substructures</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WowPacketParser\WowPacketParser.csproj">
       <Project>{0BF6F270-0B6F-4705-8E1A-F57DB76DB407}</Project>
       <Name>WowPacketParser</Name>
